01-iso27001-nist-csf/terraform/security_group.tf
resource "aws_security_group" "app_sg"{
    name = "nimbus-app-sg"
    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["10.0.0.0/16"]
    }
    ingress {
        from_port = 22 
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["10.0.0.0/16"]
    }
    egress {
        from_port = 0 
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
     tags = {
        Owner              = "Cloud Security Engineer"
        DataClassification = "Confidential"
  }
}
